Fix overflowing text on post-list

--- a/frontend/src/app/pages/login/login.component.css
+++ b/frontend/src/app/pages/login/login.component.css
@@ -16,6 +16,6 @@ mat-spinner {
 }
 
 .error {
-  color: red;
+  color: #c2185b;
   margin: auto 5px;
 }
