--- a/frontend/src/app/shared/post-list/post-list.component.css
+++ b/frontend/src/app/shared/post-list/post-list.component.css
@@ -7,3 +7,7 @@ mat-card {
 mat-card:first-of-type {
   margin-top: 15px;
 }
+
+.content {
+  word-break: break-all;
+}
